# OpenGL_Test

./: .gitignore  CMakeLists.txt
dependencies/glad/: glad.h
src/: c_config.h  c_triangle.c  c_triangle.h  config.c  glad.c  linear_algebra.c  linear_algebra.h  main.c  material.c  material.h
src/cpp_source/: config.h  main.cpp  triangle.h
src/shaders/: fragment.txt  vertex.txt
